# pajama-neuro

./: .gitignore  Cargo.toml  build.rs  debug_hitboxes.py  exports.def  install.bat  readme.md
.github/workflows/: build.yml
src/: dialog.rs  game.rs  lib.rs  neuro_sdk.rs  sdl.rs
src/game/: engine.rs  events.rs  mod.rs
src/rooms/: back_door.rs  base_of_the_tree.rs  bedroom.rs  by_the_well.rs  cavern.rs  cavern_with_bucket.rs  claw_game.rs  claw_game_room.rs  connect_the_dots_wall.rs  credits.rs  dark_mine_cart_room.rs  darkness_closet.rs  darkness_door.rs  darkness_room.rs  door_room.rs  editor.rs  forest_path.rs  garden.rs  geyser.rs  gold_junction.rs  gold_vein.rs  grandfather_clock_gears.rs  grandfather_clock_room.rs  guardian_trees.rs  he_logo.rs  helogo.rs  ig_logo.rs  inner_cavern.rs  interem_return_room.rs  intro.rs  inventory.rs  junction.rs  kitchen.rs  lab.rs  lab_exterior.rs  laundry.rs  living_room.rs  main_tree_house_hall.rs  middle_of_the_stream.rs  mine_cart_jumping_room.rs  (+33 more)
