[package]
name = "pajama-neuro"
version = "0.1.0"
edition = "2024"

[lib]
name = "SDL2"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.32"
neuro-sama = {version = "0.4.6", features = ["strip-trailing-zeroes"] }
schemars = { version = "0.8", features = ["derive"] }
serde = "1.0.215"
tokio = { version = "1.42.0", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

[dependencies.windows-sys]
version = ">=0.59, <=0.61"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
]
